# mpc

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.vc  NEWS  README  README.dev  TODO  abs.c  acinclude.m4  add.c  add_fr.c  add_ui.c  cmp_si_si.c  cmp_ui.c  configure.ac  conj.c  cos.c  div.c  div_2exp.c  div_fr.c  div_ui.c  exp.c  get_prec.c  get_prec2.c  init.c  init2.c  inp_str.c  makefile  makefile.vc  mpc-impl.h  mpc.h  mpc.texi  mul.c  mul_2exp.c  mul_fr.c  mul_i.c  (+27 more)
doc/: algorithms.bib  algorithms.tex  mpc.texi  version.texi
m4/: mpc.m4  valgrind-tests.m4
src/: Makefile.am  abs.c  acos.c  acosh.c  add.c  add_fr.c  add_si.c  add_ui.c  arg.c  asin.c  asinh.c  atan.c  atanh.c  balls.c  clear.c  cmp.c  cmp_abs.c  cmp_si_si.c  conj.c  cos.c  cosh.c  div.c  div_2exp.c  div_2ui.c  div_fr.c  div_ui.c  dot.c  exp.c  fma.c  fr_div.c  fr_sub.c  get.c  get_prec.c  get_prec2.c  get_str.c  get_version.c  get_x.c  imag.c  init2.c  init3.c  (+57 more)
tests/: Makefile.am  README.dev  check_data.c  clear_parameters.c  comparisons.c  copy_parameter.c  double_rounding.c  exceptions.c  init_parameters.c  memory.c  mpc-tests.h  mpc_check.c  mpc_check_template3.c  mpcheck-double.c  mpcheck-float.c  mpcheck-float128.c  mpcheck-longdouble.c  mpcheck-template1.c  mpcheck-template2.c  mpcheck-template3.c  print_parameter.c  random.c  read_data.c  read_data_cc.c  read_description.c  read_line.c  rootofunity.dsc  rounding.c  sin  sin_cos.dsc  tabs.c  tacos.c  tacosh.c  tadd.c  tadd_fr.c  tadd_si.c  tadd_ui.c  targ.c  tasinh.c  tatan.c  (+68 more)
tools/: Makefile.am  README.coverage  README.pipol  README.testgen  coverage
tools/bench/: Makefile.am  benchtime.h  mpcbench.c
tools/mpcheck/: README  mpcheck-common.c  mpcheck-double.c  mpcheck-float.c  mpcheck-float128.c  mpcheck-longdouble.c  mpcheck-template2.c
tools/pipol/: rc.amd64-linux-debian-etch  rc.amd64-linux-fedora  rc.amd64-linux-mandriva  rc.amd64-linux-suse-LES10  rc.amd64-linux-ubuntu-feisty  rc.amd64-linux-ubuntu-hardy  rc.fedora  rc.i386-linux-debian-etch  rc.i386-linux-debian-testing  rc.i386-linux-mandriva  rc.mac  rc.redhat
tools/pipol/nightly/: multiopt
tools/pipol/scripts/: compile-svn.sh  get-svn.sh
tools/pipol/yum.repos.d/: fedora-development.repo
tools/testgen/: makefile  write_test.h  write_test_div.c  write_test_divfr.c  write_test_frdiv.c  write_test_frsub.c  write_test_mulfr.c  write_test_norm.c  write_test_subfr.c
web/: content_applications.php  content_development.php  content_documentation.php  content_download.php  content_home.php  content_html.php  htmlUtils.php  index.php  menu.xml  mpc.css  structureUtils.php
web/download/: configure.patch
