## src/Makefile.am -- Process this file with automake to produce Makefile.in

lib_LTLIBRARIES = libmpc.la
libmpc_la_SOURCES = mpc-impl.h abs.c add.c add_fr.c add_ui.c clear.c \
cmp.c cmp_si_si.c conj.c cos.c div_2exp.c div.c div_fr.c div_ui.c exp.c \
get_prec2.c get_prec.c init2.c init3.c init.c inp_str.c mul_2exp.c mul.c \
mul_fr.c mul_i.c mul_si.c mul_ui.c neg.c norm.c out_str.c random2.c random.c \
set.c set_d_d.c set_dfl_prec.c set_prec.c set_si_si.c set_ui_fr.c \
set_ui_ui.c sin.c sqr.c sqrt.c sub.c sub_ui.c uceil_log2.c ui_div.c \
ui_ui_sub.c

