## src/Makefile.am -- Process this file with automake to produce Makefile.in
AM_CFLAGS=@WARNINGCFLAGS@

lib_LTLIBRARIES = libmpc.la
libmpc_la_LDFLAGS = -version-info 1:0:0
libmpc_la_SOURCES = mpc-impl.h abs.c add.c add_fr.c add_ui.c arg.c clear.c	\
cmp.c cmp_si_si.c conj.c cos.c cosh.c div_2exp.c div.c div_fr.c div_ui.c exp.c	\
fr_div.c fr_sub.c get_prec2.c get_prec.c get_version.c imag.c init2.c init3.c	\
inp_str.c log.c mul_2exp.c mul.c mul_fr.c mul_i.c mul_si.c mul_ui.c neg.c	\
norm.c out_str.c proj.c random2.c random.c real.c urandom.c set.c set_prec.c	\
set_str.c set_x.c set_x_x.c sin.c sinh.c sqr.c sqrt.c strtoc.c sub.c sub_fr.c	\
sub_ui.c tan.c tanh.c uceil_log2.c ui_div.c ui_ui_sub.c
